feedpage, search(mian) - 컨트롤러, 타임리프 작업 완료

--- a/src/main/resources/templates/main/searchpage.html
+++ b/src/main/resources/templates/main/searchpage.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>히포북</title>
-    <link rel="stylesheet" href="/css/searchpage.css">
-    <script defer src="/js/category_modal.js"></script>
+    <link rel="stylesheet" th:href="@{/css/main/searchpage.css}">
+    <script defer th:src="@{/js/feed/category_modal.js}"></script>
 </head>
 <body>
     <header>
@@ -13,13 +13,13 @@
             <h1 class="header_logo">
                 <div class="header_logo_layout">
                     <a href="">  <!--홈페이지 버튼 -->
-                    <img src="/images/HippoBook_logo.png" alt="" class="header_logo_images">
+                    <img th:src="@{/images/main/HippoBook_logo.png}" alt="" class="header_logo_images">
                     </a>
                 </div>
             </h1>
             <div class="header_right_layout">
                 <a href=""> <!-- 알람 페이지 이동  -->
-                <img src="/images/alarm.png" alt="" class="header_right_alarm">
+                <img th:src="@{/images/main/alarm.png}" alt="" class="header_right_alarm">
                 </a>
                 <ul class="header_right_login">
                     <a href="" class="header_right_login_box">로그인</a>
@@ -31,7 +31,7 @@
             <div class="main_top_layout">
                 <a href="#" onclick="return false"> 
                     <!-- 카테고리  -->
-                        <img src="/images/Category.png" alt="" class="main_top_category">
+                        <img th:src="@{/images/main/Category.png}" alt="" class="main_top_category">
                 </a>
                 <div class="main_top_category_tap">
                     <ul class="main_top_category_list">
@@ -56,7 +56,7 @@
     <main>
         <div class="search_input_layer">
             <div class="search_input_area">
-                <img src="/images/search.png" alt="">
+                <img th:src="@{/images/main/search.png}" alt="">
                 <label>
                     <div class="search_inner">
                         <div class="search_input">
