"쪽지쓰기,쪽지함,마이페이지 소개, 책장, 내 게시물  - GetMapping"

--- a/src/main/resources/static/css/mypage/myPageInt.css
+++ b/src/main/resources/static/css/mypage/myPageInt.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "neon";
-  src: url("../font/SpoqaHanSansNeo_all/SpoqaHanSansNeo_TTF_original/SpoqaHanSansNeo-Bold.ttf");
+  src: url("");
 }
 
 * {
@@ -125,6 +125,7 @@ a {
   padding: 0 160px 0 230px;
   flex-direction: column;
   background-color: rgba(42, 193, 188, 0.8);
+  box-shadow: 0 5px 5px -2px gray;
 }
 
 .profile-all {
