--- a/src/main/resources/templates/message/send_letter.html
+++ b/src/main/resources/templates/message/send_letter.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../new2/post_main.css" />
-    <script defer src="../new2/post_main.js"></script>
+    <link rel="stylesheet" th:href="@{/css/message/send_letter.css}" />
+    <script defer th:src="@{/js/message/send_letter.js}"></script>
     <title>Document</title>
   </head>
   <body>
@@ -23,9 +23,9 @@
           <div class="main__post-type-menu-box">
             <ul class="main__post-menu-ul">
               <li class="post-menu-li post-menu-select-li">
-                <a href="">받은쪽지함</a><span class="post-menu-select-span"></span>
+                <a href="">받은쪽지함</a><span></span>
               </li>
-              <li class="post-menu-li"><a href="">보낸쪽지함</a><span></span></li>
+              <li class="post-menu-li"><a href="">보낸쪽지함</a><span class="post-menu-select-span"></span></li>
              
             </ul>
             <div class="main__post-write-btn-box">
@@ -38,7 +38,7 @@
             <div class="main__post-order-type-box">
               <ul>
                 <li><a href="">최신순</a></li>
-                <li><a href="">읽은순</a></li>
+                <li><a href="">오래된순</a></li>
               </ul>
             </div>
           </div>
@@ -51,11 +51,11 @@
                   <img src="" alt="" />
                 </p>
                 <div class="main__post-detail-info-box">
-                  <span>보낸 사람</span>
+                  <span>받은 사람</span>
                   <ul>
                     
                     <li>AM 10:55</li>
-                    <li>읽음</li>
+                    
                   </ul>
                 </div>
               </li>
@@ -66,11 +66,11 @@
                   <img src="" alt="" />
                 </p>
                 <div class="main__post-detail-info-box">
-                  <span>보낸 사람</span>
+                  <span>받은 사람</span>
                   <ul>
                     
                     <li>AM 10:55</li>
-                    <li>안읽음</li>
+                    
                   </ul>
                 </div>
               </li>
@@ -81,11 +81,11 @@
                   <img src="" alt="" />
                 </p>
                 <div class="main__post-detail-info-box">
-                  <span>보낸 사람</span>
+                  <span>받은 사람</span>
                   <ul>
                     
                     <li>AM 10:55</li>
-                    <li>읽음</li>
+                    
                   </ul>
                 </div>
               </li>
@@ -96,11 +96,11 @@
                   <img src="" alt="" />
                 </p>
                 <div class="main__post-detail-info-box">
-                  <span>보낸 사람</span>
+                  <span>받은 사람</span>
                   <ul>
                     
                     <li>AM 10:55</li>
-                    <li>안읽음</li>
+                    
                   </ul>
                 </div>
               </li>
@@ -111,11 +111,11 @@
                   <img src="" alt="" />
                 </p>
                 <div class="main__post-detail-info-box">
-                  <span>보낸 사람</span>
+                  <span>받은 사람</span>
                   <ul>
                     
                     <li>AM 10:55</li>
-                    <li>읽음</li>
+                    
                   </ul>
                 </div>
               </li>
@@ -126,11 +126,11 @@
                   <img src="" alt="" />
                 </p>
                 <div class="main__post-detail-info-box">
-                  <span>보낸 사람</span>
+                  <span>받은 사람</span>
                   <ul>
                     
                     <li>AM 10:55</li>
-                    <li>안읽음</li>
+                    
                   </ul>
                 </div>
               </li>
@@ -141,11 +141,11 @@
                   <img src="" alt="" />
                 </p>
                 <div class="main__post-detail-info-box">
-                  <span>보낸 사람</span>
+                  <span>받은 사람</span>
                   <ul>
                     
                     <li>AM 10:55</li>
-                    <li>읽음</li>
+                    
                   </ul>
                 </div>
               </li>
@@ -156,11 +156,11 @@
                   <img src="" alt="" />
                 </p>
                 <div class="main__post-detail-info-box">
-                  <span>보낸 사람</span>
+                  <span>받은 사람</span>
                   <ul>
                     
                     <li>AM 10:55</li>
-                    <li>안읽음</li>
+                    
                   </ul>
                 </div>
               </li>
@@ -171,11 +171,11 @@
                   <img src="" alt="" />
                 </p>
                 <div class="main__post-detail-info-box">
-                  <span>보낸 사람</span>
+                  <span>받은 사람</span>
                   <ul>
                     
                     <li>AM 10:55</li>
-                    <li>읽음</li>
+                    
                   </ul>
                 </div>
               </li>
@@ -186,11 +186,11 @@
                   <img src="" alt="" />
                 </p>
                 <div class="main__post-detail-info-box">
-                  <span>보낸 사람</span>
+                  <span>받은 사람</span>
                   <ul>
                     
                     <li>AM 10:55</li>
-                    <li>안읽음</li>
+                    
                   </ul>
                 </div>
               </li>
